@@ -4,13 +4,13 @@
   </description>
    
   <resources id='javac.compiler.args.parts.collection'>
+    <string value="--add-modules jdk.httpserver" />    
     <string value="--add-modules jdk.management.jfr" />
-    <string value="--add-exports java.desktop/sun.awt=ALL-UNNAMED" />    
   </resources>
 
   <pathconvert pathsep=' ' refid='javac.compiler.args.parts.collection' property='javac.compiler.args.parts' />
 
-  <property name="javac.compiler.args" value="-version ${javac.compiler.args.parts}"/>  
+  <property name="javac.compiler.args" value="${javac.compiler.args.parts}"/>  
   
   <property name="src" location="src"/>
   <property name="build" location="build"/>
@@ -25,7 +25,7 @@
 
   <target name="compile" depends="init" description="compile the source">
     <!-- Compile the Java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}">
+    <javac fork="true" srcdir="${src}" destdir="${build}">
       <compilerarg line="${javac.compiler.args}"/>      
     </javac>
   </target>
